<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ @(#)pom.xml
  ~ Copyright © 2023 The authors and contributors of JHotDraw. MIT License.
  ~
  ~ Usage:
  ~ export revision=$(git show -s - -format=%cs_%h)
  ~ mvn clean deploy -Dmaven.test.skip=true -Drevision=$revision
  ~
  ~
  ~ Check for dependency updates:
  ~ mvn versions:display-dependency-updates
  ~
  ~ Check for maven plugin updates:
  ~ mvn versions:display-plugin-updates
-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>ch.randelshofer</groupId>
  <artifactId>org.jhotdraw8</artifactId>
  <version>${revision}</version>
  <licenses>
    <license>
      <name>MIT License</name>
      <url>https://opensource.org/licenses/MIT</url>
    </license>
  </licenses>
  <url>https://github.com/wrandelshofer/jhotdraw8</url>
  <scm>
    <url>https://github.com/wrandelshofer/jhotdraw8.git</url>
  </scm>

  <packaging>pom</packaging>
  <name>*Parent Project JHotDraw8</name>

  <modules>
    <module>org.jhotdraw8.application</module>
    <module>org.jhotdraw8.base</module>
    <module>org.jhotdraw8.fxbase</module>
    <module>org.jhotdraw8.css</module>
    <module>org.jhotdraw8.color</module>
    <module>org.jhotdraw8.draw</module>
    <module>org.jhotdraw8.collection</module>
    <module>org.jhotdraw8.icollection</module>
    <module>org.jhotdraw8.examples</module>
    <module>org.jhotdraw8.fxcollection</module>
    <module>org.jhotdraw8.fxcontrols</module>
    <module>org.jhotdraw8.geom</module>
    <module>org.jhotdraw8.graph</module>
    <module>org.jhotdraw8.grapher</module>
    <module>org.jhotdraw8.os</module>
    <module>org.jhotdraw8.svg</module>
    <module>org.jhotdraw8.teddy</module>
    <module>org.jhotdraw8.theme</module>
    <module>org.jhotdraw8.xml</module>
  </modules>

  <properties>
    <maven.compiler.target>21</maven.compiler.target>
    <maven.compiler.source>21</maven.compiler.source>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <project.build.outputTimestamp>${git.commit.time}</project.build.outputTimestamp>
    <revision>1.0</revision>
  </properties>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>io.github.git-commit-id</groupId>
          <artifactId>git-commit-id-maven-plugin</artifactId>
          <version>8.0.2</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-artifact-plugin</artifactId>
          <version>3.5.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.13.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-javadoc-plugin</artifactId>
          <version>3.6.3</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-project-info-reports-plugin</artifactId>
          <version>3.5.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.3.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-site-plugin</artifactId>
          <version>4.0.0-M14</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-source-plugin</artifactId>
          <version>3.3.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.2.5</version>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>flatten-maven-plugin</artifactId>
          <version>1.6.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-enforcer-plugin</artifactId>
          <version>3.4.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>3.1.2</version>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-enforcer-plugin</artifactId>
        <executions>
          <execution>
            <id>enforce-maven</id>
            <goals>
              <goal>enforce</goal>
            </goals>
            <configuration>
              <rules>
                <requireMavenVersion>
                  <version>3.6.3</version>
                </requireMavenVersion>
              </rules>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <argLine>--add-exports org.junit.platform.commons/org.junit.platform.commons.logging=ALL-UNNAMED
          </argLine>
          <argLine>--add-exports org.junit.platform.commons/org.junit.platform.commons.util=ALL-UNNAMED
          </argLine>
          <argLine>-Djdk.attach.allowAttachSelf</argLine>
          <argLine>-XX:+EnableDynamicAgentLoading</argLine>
          <parallel>classesAndMethods</parallel>
          <forkCount>4</forkCount>
        </configuration>
      </plugin>
      <plugin>
        <groupId>io.github.git-commit-id</groupId>
        <artifactId>git-commit-id-maven-plugin</artifactId>
        <executions>
          <execution>
            <id>get-the-git-infos</id>
            <goals>
              <goal>revision</goal>
            </goals>
            <phase>initialize</phase>
          </execution>
        </executions>
        <configuration>
          <generateGitPropertiesFile>true</generateGitPropertiesFile>
          <generateGitPropertiesFilename>${project.build.outputDirectory}/git.properties
          </generateGitPropertiesFilename>
          <dateFormatTimeZone>UTC</dateFormatTimeZone>
          <dateFormat>yyyy-MM-dd'T'HH:mm:ss'Z'</dateFormat>
          <includeOnlyProperties>
            <includeOnlyProperty>^git.commit.(time|version)$</includeOnlyProperty>
            <includeOnlyProperty>^git.commit.id.(abbrev|full)$</includeOnlyProperty>
          </includeOnlyProperties>
          <commitIdGenerationMode>full</commitIdGenerationMode>
          <skipPoms>false</skipPoms>
          <verbose>true</verbose>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.4.1</version>
        <configuration>
          <archive>
            <manifest>
              <addDefaultEntries>false</addDefaultEntries>
            </manifest>
            <manifestEntries>
              <SCM-URL>${project.scm.url}</SCM-URL>
              <Revision>$revision</Revision>
              <Git-Commit-Time>${git.commit.time}</Git-Commit-Time>
              <Git-Commit-Id>${git.commit.id.full}</Git-Commit-Id>
            </manifestEntries>
          </archive>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <configuration>
          <archive>
            <manifest>
              <addDefaultEntries>false</addDefaultEntries>
            </manifest>
            <manifestEntries>
              <SCM-URL>${project.scm.url}</SCM-URL>
              <Git-Commit-Time>${git.commit.time}</Git-Commit-Time>
              <Git-Commit-Id>${git.commit.id.full}</Git-Commit-Id>
            </manifestEntries>
            <addMavenDescriptor>false</addMavenDescriptor>
          </archive>
        </configuration>
        <executions>
          <execution>
            <id>attach-sources</id>
            <phase>package</phase>
            <goals>
              <goal>jar-no-fork</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <compilerArgs>
            <arg>-Xlint</arg>
          </compilerArgs>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-resources-plugin</artifactId>
        <executions>
          <execution>
            <id>copy-license-file-to-resources</id>
            <phase>generate-sources</phase>
            <goals>
              <goal>copy-resources</goal>
            </goals>
            <configuration>
              <outputDirectory>${project.build.directory}/generated-sources/java/META-INF
              </outputDirectory>
              <resources>
                <resource>
                  <directory>..</directory>
                  <includes>
                    <include>*LICENSE</include>
                    <include>*NOTICE</include>
                  </includes>
                </resource>
              </resources>
            </configuration>
          </execution>
          <execution>
            <id>copy-license-file-to-classes</id>
            <phase>process-classes</phase>
            <goals>
              <goal>copy-resources</goal>
            </goals>
            <configuration>
              <outputDirectory>${project.build.outputDirectory}/META-INF</outputDirectory>
              <resources>
                <resource>
                  <directory>..</directory>
                  <includes>
                    <include>*LICENSE</include>
                    <include>*NOTICE</include>
                  </includes>
                </resource>
              </resources>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>flatten-maven-plugin</artifactId>
        <configuration>
          <updatePomFile>true</updatePomFile>
          <flattenMode>oss</flattenMode>
        </configuration>
        <executions>
          <execution>
            <id>flatten</id>
            <phase>process-resources</phase>
            <goals>
              <goal>flatten</goal>
            </goals>
          </execution>
          <execution>
            <id>flatten.clean</id>
            <phase>clean</phase>
            <goals>
              <goal>clean</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <executions>
          <execution>
            <id>attach-javadocs</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <reporting>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <reportSets>
          <reportSet>
            <id>aggregate</id>
            <inherited>false</inherited>
            <reports>
              <report>aggregate</report>
            </reports>
          </reportSet>
          <reportSet>
            <id>default</id>
            <reports>
              <report>javadoc</report>
            </reports>
          </reportSet>
        </reportSets>
        <configuration>
          <windowtitle>JHotDraw 8 ${project.version}</windowtitle>
          <header>JHotDraw 8 ${project.version}</header>
          <bottom>Copyright © 2023 Werner Randelshofer, Switzerland. MIT License.</bottom>
          <doclint>all,-missing</doclint>
          <charset>UTF-8</charset>
          <docencoding>UTF-8</docencoding>
          <encoding>UTF-8</encoding>
        </configuration>
      </plugin>
    </plugins>
  </reporting>

  <dependencyManagement>
    <dependencies>
      <!-- https://mvnrepository.com/artifact/com.google.guava/guava-testlib -->
      <dependency>
        <groupId>com.google.guava</groupId>
        <artifactId>guava-testlib</artifactId>
        <version>33.2.0-jre</version>
      </dependency>
      <dependency>
        <groupId>de.sandec</groupId>
        <artifactId>JMemoryBuddy</artifactId>
        <version>0.5.4</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.openjdk.jmh</groupId>
        <artifactId>jmh-core</artifactId>
        <version>1.37</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.openjdk.jmh</groupId>
        <artifactId>jmh-generator-annprocess</artifactId>
        <version>1.37</version>
        <scope>test</scope>
      </dependency>
      <!-- https://mvnrepository.com/artifact/org.jspecify/jspecify -->
      <dependency>
        <groupId>org.jspecify</groupId>
        <artifactId>jspecify</artifactId>
        <version>0.3.0</version>
      </dependency>
      <dependency>
        <groupId>ch.randelshofer</groupId>
        <artifactId>org.jhotdraw8.application</artifactId>
        <version>${revision}</version>
      </dependency>
      <dependency>
        <groupId>ch.randelshofer</groupId>
        <artifactId>org.jhotdraw8.color</artifactId>
        <version>${revision}</version>
      </dependency>
      <dependency>
        <groupId>ch.randelshofer</groupId>
        <artifactId>org.jhotdraw8.collection</artifactId>
        <version>${revision}</version>
      </dependency>
      <dependency>
        <groupId>ch.randelshofer</groupId>
        <artifactId>org.jhotdraw8.css</artifactId>
        <version>${revision}</version>
      </dependency>
      <dependency>
        <groupId>ch.randelshofer</groupId>
        <artifactId>org.jhotdraw8.fxcontrols</artifactId>
        <version>${revision}</version>
      </dependency>
      <dependency>
        <groupId>ch.randelshofer</groupId>
        <artifactId>org.jhotdraw8.icollection</artifactId>
        <version>${revision}</version>
      </dependency>
      <dependency>
        <groupId>ch.randelshofer</groupId>
        <artifactId>org.jhotdraw8.draw</artifactId>
        <version>${revision}</version>
      </dependency>
      <dependency>
        <groupId>ch.randelshofer</groupId>
        <artifactId>org.jhotdraw8.fxcollection</artifactId>
        <version>${revision}</version>
      </dependency>
      <dependency>
        <groupId>ch.randelshofer</groupId>
        <artifactId>org.jhotdraw8.os</artifactId>
        <version>${revision}</version>
      </dependency>
      <dependency>
        <groupId>ch.randelshofer</groupId>
        <artifactId>org.jhotdraw8.base</artifactId>
        <version>${revision}</version>
      </dependency>
      <dependency>
        <groupId>ch.randelshofer</groupId>
        <artifactId>org.jhotdraw8.fxbase</artifactId>
        <version>${revision}</version>
      </dependency>
      <dependency>
        <groupId>ch.randelshofer</groupId>
        <artifactId>org.jhotdraw8.geom</artifactId>
        <version>${revision}</version>
      </dependency>
      <dependency>
        <groupId>ch.randelshofer</groupId>
        <artifactId>org.jhotdraw8.graph</artifactId>
        <version>${revision}</version>
      </dependency>
      <dependency>
        <groupId>ch.randelshofer</groupId>
        <artifactId>org.jhotdraw8.xml</artifactId>
        <version>${revision}</version>
      </dependency>
      <dependency>
        <groupId>ch.randelshofer</groupId>
        <artifactId>org.jhotdraw8.svg</artifactId>
        <version>${revision}</version>
      </dependency>
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter</artifactId>
        <version>5.10.2</version>
      </dependency>
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-api</artifactId>
        <version>5.10.2</version>
      </dependency>
      <dependency>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-base</artifactId>
        <version>22.0.1</version>
      </dependency>
      <dependency>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-fxml</artifactId>
        <version>22.0.1</version>
      </dependency>
      <dependency>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-graphics</artifactId>
        <version>22.0.1</version>
      </dependency>
      <dependency>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-controls</artifactId>
        <version>22.0.1</version>
      </dependency>
      <dependency>
        <groupId>io.vavr</groupId>
        <artifactId>vavr</artifactId>
        <version>1.0.0-alpha-4</version>
      </dependency>
      <dependency>
        <groupId>org.scala-lang</groupId>
        <artifactId>scala-library</artifactId>
        <version>2.13.14</version>
      </dependency>
      <dependency>
        <groupId>org.jetbrains.kotlinx</groupId>
        <artifactId>kotlinx-collections-immutable-jvm</artifactId>
        <version>0.3.7</version>
      </dependency>
      <dependency>
        <groupId>org.openjdk.jol</groupId>
        <artifactId>jol-core</artifactId>
        <version>0.17</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <distributionManagement>
    <repository>
      <id>my-internal-repo</id>
      <name>My Internal Repository</name>
      <url>file:///Users/Shared/Developer/Maven</url>
    </repository>
  </distributionManagement>
</project>
